src/main/java/com/example/project_v2/_core/errors/exception/ApiException400.java
package com.example.project_v2._core.errors.exception;

public class ApiException400 extends RuntimeException {
    public ApiException400(String msg){
        super(msg);
    }
}
